--- a/streamflow.yml
+++ b/streamflow.yml
@@ -17,23 +17,31 @@ workflows:
 deployments:
   image1:
     type: docker
+    lazy: false
     config:
       image: mul8/dummyfailure
+      cpus: 2
 
   image2:
     type: docker
+    lazy: false
     config:
       image: mul8/dummyfailure
+      cpus: 2
 
   image3:
     type: docker
+    lazy: false
     config:
       image: mul8/dummyfailure
+      cpus: 2
   
   image4:
     type: docker
+    lazy: false
     config:
       image: mul8/dummyfailure
+      cpus: 2
 
 failureManager:
   enabled: True
